* Upgrade Django 1.6 to 1.8     * mimetype -> content_type     * no more cache headers with forms     * utf-8 encoding fixes * Remove south app and dependency, migration is now included in Django * Switch from django-social-auth to python-social-auth * Upgrade dependencies

--- a/techism/templates/accounts/login.html
+++ b/techism/templates/accounts/login.html
@@ -6,18 +6,18 @@
 
         <h3>Wähle deinen Login Provider:</h3>
         <p>
-            <a class="zocial google" href="{% url 'socialauth_begin' 'google' %}">Login mit Google</a> 
-            <a class="zocial twitter" href="{% url 'socialauth_begin' 'twitter' %}">Login mit Twitter</a> 
-            <a class="zocial yahoo" href="{% url 'socialauth_begin' 'yahoo' %}">Login mit Yahoo</a> 
+            <a class="zocial google" href="{% url 'social:begin' 'google-oauth2' %}">Login mit Google</a>
+            <a class="zocial twitter" href="{% url 'social:begin' 'twitter' %}">Login mit Twitter</a>
+            <a class="zocial yahoo" href="{% url 'social:begin' 'yahoo' %}">Login mit Yahoo</a>
             <a class="zocial openid" href="#">Login mit OpenID</a>
             <!-- Define a form to send the POST data -->
-            <form method="post" action="{% url 'socialauth_complete' "browserid" %}">
+            <form method="post" action="{% url 'social:complete' 'browserid' %}">
                 <input type="hidden" name="assertion" value="" />
                 <a class="zocial browserid" rel="nofollow" id="browserid" href="#">Login mit Mozilla Persona</a>
             </form>
         </p>
         <div id="openid">
-            <form action="{% url 'socialauth_begin' 'openid' %}" method="post">
+            <form action="{% url 'social:begin' 'openid' %}" method="post">
                 {% csrf_token %}
                 <div class="row">
                     <label for="openid_identifier">Trage deine OpenID ein:</label> <input id="openid_identifier"
